# fieldops-sql-sandbox

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: crop_stats.json  weather_daily.json
docs/: architecture.md  demo-walkthrough.md  interview-notes.md  threat-model.md
scripts/: build_fieldops_db.py
src/fieldops/: __init__.py  cli.py  config.py  metadata.py
src/fieldops/agents/: __init__.py  catalog.py  orchestrator.py  provider.py
src/fieldops/data/: __init__.py  builder.py  schema.sql
src/fieldops/mcp_client/: __init__.py  config.py  router.py
src/fieldops/mcp_servers/: __init__.py  metadata_server.py  sql_sandbox_server.py
src/fieldops/security/: __init__.py  sql_executor.py  sql_validator.py
src/fieldops/tools/: __init__.py  gemini_adapter.py  openai_adapter.py  protocol.py
tests/: test_cli.py  test_cli_orchestrator.py  test_data_builder.py  test_gemini_adapter.py  test_mcp_config.py  test_mcp_router.py  test_mcp_router_integration.py  test_metadata.py  test_metadata_server.py  test_openai_adapter.py  test_orchestrator.py  test_provider.py  test_schema.py  test_sql_executor.py  test_sql_sandbox_server.py  test_sql_validator.py  test_tool_protocol.py
