[project]
name = "fieldops-sql-sandbox"
version = "0.1.0"
description = "Async multi-agent FieldOps analyst mapping native LLM tool calls to isolated MCP SQL sandboxes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai>=1.20.0",
  "httpx>=0.28.0",
  "mcp>=1.9.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "sqlglot>=26.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[project.scripts]
fieldops = "fieldops.cli:app"
fieldops-metadata-mcp = "fieldops.mcp_servers.metadata_server:main"
fieldops-sql-mcp = "fieldops.mcp_servers.sql_sandbox_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldops"]
include = [
  "src/fieldops/**/*.sql",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
